--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,28 @@ ansi2html==1.8.0
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
+contourpy==1.1.1
+cycler==0.12.1
 dash==2.13.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 Flask==2.2.5
+fonttools==4.43.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kiwisolver==1.4.5
 MarkupSafe==2.1.3
+matplotlib==3.8.0
 nest-asyncio==1.5.8
 numpy==1.26.0
 packaging==23.2
 pandas==2.1.1
 patsy==0.5.3
+Pillow==10.1.0
 plotly==5.17.0
+pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
@@ -29,4 +36,3 @@ typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.6
 Werkzeug==2.2.3
-matplotlib==3.8.0
